Down arrown pushes current piece to the back.

Numeric keypad arrows also work.

Speed up puzzle creation

Hide the puzzle help menu if we go back to image selection.

Handle progress bar better.

Remove unnecessary cutter constructors.

H now toggles hide, for pause and resume

Smarten up message dialogs.

Tidy up build warnings.

Better checking of command-line arguments.

Fix the check for image searching so it terminates.

Smarten up error dialogs.

Use variables for min/max number of pieces.

Fix static method call warning.

Fix generic use of ListIterator.

Remove unnecessary casts.

1.4

Remove applet; applets essentially don't work on the modern web.

Add sample selector. (The sample packages drop images into the correct
places.)

1.3

Mostly tweaks for packaging

1.2

Applet version. See README.APPLET. There are known bugs - occasionally
all the pieces end up in a corner (S to shuffle them) and sometimes the
keys don't work initially.

Refactoring in places aligned with the applet; some common code moved
into JigUtil.

1.1

Resize the image a little smaller. This makes it easier to handle as
there's more space around the edges to hold pieces.

Harmonize code and variable names in RectCutter and SquareCutter

Cleaned up some pmd warnings and missing javadoc

1.0

Created a build script

unix linefeeds

add manifest so you can java -jar it

pmd clean

lint clean

replace iterators by enhanced for loops

Rely on booleans being initialized to false

Random image selection ignores files that contain the string "thumb"

JigsawFrame shows the window before it starts reading the image, so you
know something has happened.

Resize large images so they fit on screen.

jstyle clean

OKCancelPane removed; inlined into JigsawFrontEnd

Minor optimization: a 180 rotation means we can just reverse the image
array, we don't have to walk it in 2 dimensions

JigsawFrontEnd implements ActionListener

Slight refactoring of JigsawFrame

Removed Tests
